@@ -1,3 +1,10 @@
+2006-11-06  Reiner Steib  <Reiner.Steib@gmx.de>
+
+	* message.el (message-strip-subject-encoded-words): New function
+	(message-simplify-subject-functions): New variable.
+	(message-simplify-subject): Use it.  Fix typo in doc string.
+	Support message-strip-subject-encoded-words.
+
 2006-11-03  Juanma Barranquero  <lekktu@gmail.com>
 
 	* gnus-diary.el (gnus-diary-delay-format-function):
